--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "graphql": "^0.13.2",
     "mongoose": "^5.2.7",
     "npm": "^6.3.0"
   },
