--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
     "start": "npm run build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js --exec babel-node "
+    "dev": "nodemon index.js --exec babel-node --presets es2015,stage-2"
   },
   "author": "Devf Raul Amador",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "mongoose": "^5.2.7",
     "npm": "^6.3.0"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "rimraf": "^2.6.2"
   }
 }
