--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
     "npm": "^6.3.0"
   },
