--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
   "scripts": {
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
     "start": "npm run build && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --forceExit",
     "dev": "nodemon index.js --exec babel-node --presets es2015,stage-2"
+  },
+  "jest":{
+    "testEnvironment":"node",
+    "testPathIgnorePatterns":["/node_modules"],
+    "moduleNameMapper":{
+      "^mongoose$":"<rootDir>/node_modules/mongoose"
+    }
   },
   "author": "Devf Raul Amador",
   "license": "ISC",
@@ -18,6 +25,8 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
+    "jest": "^23.5.0",
+    "jest-cli": "^23.5.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
     "npm": "^6.3.0"
